[package]
name = "crop-timers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde", "clock"] }
directories = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
termcolor = "1.3.0"
